<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvBluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/bluetooth_status"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/tbBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:layout_marginTop="@dimen/dp_4"
            app:layout_constraintTop_toTopOf="@id/tvBluetoothStatus"
            app:layout_constraintBottom_toBottomOf="@id/tvBluetoothStatus" />


        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/tvBluetoothStatus"
            android:id="@+id/top_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="RX:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/read_buffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="&lt;Read Buffer>" />
        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/top_linearlayout"
            android:id="@+id/bottom_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Status:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bluetooth_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="&lt;Bluetooth Status>" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            app:layout_constraintTop_toBottomOf="@id/bottom_linearlayout"
            android:id="@+id/btnShowPairedDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_paired_devices"
            android:paddingStart="@dimen/dp_20"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
             />

        <com.google.android.material.button.MaterialButton
            app:layout_constraintTop_toBottomOf="@id/btnShowPairedDevices"
            android:id="@+id/btnDiscover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Discover"
            android:paddingStart="@dimen/dp_20"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <LinearLayout
            android:id="@+id/lnrLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="2"
            android:layout_marginBottom="@dimen/dp_10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_music"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_13"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDisconnect"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/disconnect"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_13"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_5" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rvPairedDevices"
            android:choiceMode="singleChoice"
            app:layout_constraintBottom_toTopOf="@+id/lnrLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/btnDiscover" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>